--- a/config.css
+++ b/config.css
@@ -11,22 +11,42 @@
             {
                 color: gold;
             }
-            .btn
-            {
-                float: right;
-                padding: 10px;
-                margin: 10px;
-            }
-            button
+        
+            #btn1
             {
                 background-color: yellow;
-                width: 90px;
-                height: 40px;
-                border-radius: 10px;
+                box-shadow: 0px 2px 4px black;
+                width: 10%;
+                height: 9%;
+                border-radius: 20px;
+                margin: 20px;
+                font-size: 1.3rem;
+                
             }
-            button:hover
+            #btn1:hover
             {
-                background-color: white;
+                background-color: transparent;
+                color: yellow;
+                width: 10%;
+                transition: 1s;
+                transform:scale(1.3);
+                
+            }
+            #btn2
+            {
+                background-color: transparent;
+                color:beige;
+                box-shadow: 0px 2px 4px black;  
+                width: 10%;
+                height: 9%;
+                border-radius: 20px;
+                font-size: 1.3rem;
+            }
+            #btn2:hover
+            {
+             background-color: yellow;
+                color: rgb(3, 3, 248);
+                width: 10%;
                 transition: 1s;
                 transform:scale(1.3);
                 font-size: 1.2em;
@@ -39,7 +59,7 @@
         }
     #bd
     {
-    backdrop-filter:blur(0.9px);
+    backdrop-filter:blur(1px);
     background-color: black;
     background-clip: content-box;
     }
