--- a/dashboard.css
+++ b/dashboard.css
@@ -231,21 +231,21 @@ main{
 	border-radius: 10px;
 		padding: 1.5rem;
 		display: flex;
-		justify-content: center;
+		padding-left:2rem; 
 }
 .analytic-info h4{
 	font-weight: 400;
 	color: #555;
 	font-size: .98rem;
-  margin-bottom: .5rem;
+  
 }
 .analytic-info h1{
 	color: var(--main-text);
 	font-weight: 600;
 }
 analytic-info h1 small{
-	color: var(--main-text);
 	font-size: .8rem;
+	font-weight: 700;
 }
 .text-danger{
 	color: red;
@@ -253,8 +253,38 @@ analytic-info h1 small{
 .text-success{
 	color:#2ec3a;
 }
-32:00
+.analytic:first-child .analytic-icon
+{
+	background: #dce5f5;
+	color: #6883db;
+}
+.analytic:nth-child(2) .analytic-icon
+{
+	background: #ebf75f;
+	color: #2ec3a3;
+}
 
+.analytic:nth-child(3) .analytic-icon
+{
+	background: #ebf75f;
+	color: red;
+}
+
+.analytic:nth-child(4) .analytic-icon
+{
+	background:var(--main-accent);
+	color: var(--color-main);
+}
+.analytic-icon
+{
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	display: grid;
+	place-items: center;
+	margin-right: .5rem;
+
+}
 
 
 
